# clone-me

./: .env.example  .gitignore  README.md  lefthook.yml  pyproject.toml
data/: pdfs.xlsx
scripts/: download.sh
src/main/: main.py
src/utils/: logger.py
